@@ -1,3 +1,7 @@
+Fri Dec 20 16:01:35 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h: add a comment for WB interfaces.
+
 Fri Dec 20 16:00:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: DLDFLAGS is defined in --with-opt-dir handler, so
